--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
 
+    <link rel="stylesheet" href="./styles/utils.css">
     <link rel="stylesheet" href="./styles/colors.css">
     <link rel="stylesheet" href="./styles/style.css">
 
@@ -12,7 +13,45 @@
 </head>
 <body>
 
-    <h1>Hello, fucking world!!</h1>
+    <header class="header container">
+        <h1>Hello, fucking world!</h1>
+    </header>
+
+    <main class="main">
+        <div class="panels container">
+
+            <div class="panel-name-list">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Accusamus alias beatae dolore inventore iusto maiores necessitatibus non,
+                odio odit officiis optio quasi velit voluptatum? Corporis.
+            </div>
+
+            <button class="button button-to-answer">to answer</button>
+
+            <div class="panel-answering">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Deleniti eveniet molestiae, obcaecati quasi rerum vero.
+            </div>
+
+            <button class="button button-to-answered">to answered</button>
+
+            <div class="answered">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Distinctio dolorem magnam mollitia nulla temporibus.
+                Aperiam asperiores cum, dolores eum facere fugit ipsa iusto,
+                nulla odit officiis quae ullam. Asperiores dicta doloribus error eum laudantium
+                libero necessitatibus odit quia quidem, voluptatibus.
+                Aliquam consectetur cum earum eligendi eos impedit odio vero voluptatibus!
+
+                <button class="button button-reset">reset</button>
+            </div>
+
+        </div>
+    </main>
+
+    <footer class="footer">
+        <p class="copy-right">Copyright 2026 &copy; by Shpakov Vladyslav</p>
+    </footer>
 
 </body>
 </html>
