Added little bit styles and tags

--- a/index.html
+++ b/index.html
@@ -89,19 +89,23 @@
         <button class="button button-to-answer">to answer</button>
 
         <div class="panel panel-answering">
-            <div class="name-item">
-                Vladyslav Shpakov
+            <div class="name-list">
+                <div class="name-item">
+                    Vladyslav Shpakov
+                </div>
             </div>
         </div>
 
         <button class="button button-to-answered">to answered</button>
 
         <div class="panel panel-answered">
-            <div class="name-item">
-                Vladyslav Shpakov
-            </div>
+            <div class="name-list">
+                <div class="name-item">
+                    Vladyslav Shpakov
+                </div>
 
-            <button class="button button-reset">reset</button>
+                <button class="button button-reset">reset</button>
+            </div>
         </div>
 
     </div>
